--- a/src/pages/check-setup/check-setup.html
+++ b/src/pages/check-setup/check-setup.html
@@ -4,7 +4,7 @@
       <h1>Inizia la configurazione</h1>
       <h2>
         1. Clicca il tasto presente sul dispositivo per iniziare la sincronizzazione. <br><br><br>
-        2. Dalle impostazione WI-FI del tuo dispositivo connetiti alla rete ArduLock. <br><br><br>
+        2. Dalle impostazioni WI-FI del tuo dispositivo connetiti alla rete ArduLock. <br><br><br>
         3. Ritorna sull'app.<br>
       </h2>
     </div>
