--- a/src/pages/setup/setup.html
+++ b/src/pages/setup/setup.html
@@ -1,15 +1,5 @@
 <ion-content>
   <form [formGroup] = 'formgroup' class="page">
-    <div *ngIf="step==0">
-      <h1>Inserisci la password dell' account</h1>
-      <ion-input type="password" formControlName='passwordAccount' placeholder="******"></ion-input>
-      <ion-row justify-content-center>
-        <p *ngIf="passwordAccount.hasError('required') && passwordAccount.touched">Password Obbligatoria</p> 
-      </ion-row>
-      <ion-row >
-        <button (click)="stepForward()">AVANTI</button>
-      </ion-row>
-    </div>
     <div *ngIf="step==1">
         <h1>Configurazione Sensori</h1>
         <ion-label>Etichetta Sensore 1</ion-label>
@@ -18,21 +8,28 @@
         <ion-label>Etichetta Sensore 2</ion-label>
         <ion-input formControlName="label2" placeholder="Cucina"></ion-input>
         <p *ngIf="label2.hasError('required') && label2.touched">Campo Obbligatorio</p> 
-        <ion-row>
-          <button (click)="stepForward()">AVANTI</button>
-        </ion-row>
     </div>
     <div *ngIf="step==2">
       <h1>Imposta Password Di Sblocco</h1>
-      <ion-label>Password</ion-label>
+      <ion-label>Password(Mininimo 6 caratteri)</ion-label>
       <ion-input type="password" formControlName="password" placeholder="******"></ion-input>
-      <p *ngIf="password.hasError('required') && password.touched">Campo Obbligatorio</p> 
+      <p *ngIf="password.hasError('required') && password.touched">Campo Obbligatorio</p>
       <ion-label>Conferma Password</ion-label>
       <ion-input type="password" formControlName="passwordConfirm" placeholder="******"></ion-input>
-      <p *ngIf="passwordConfirm.hasError('required') && passwordConfirm.touched">Campo Obbligatorio</p> 
-      <ion-row>
-        <button (click) ="stepForward()">AVANTI</button>
-      </ion-row>
+      <p *ngIf="passwordConfirm.hasError('required') && passwordConfirm.touched">Campo Obbligatorio</p>
+      <p *ngIf="passwordDoesntMatch">Le password non coincidono</p> 
     </div>
+    <div *ngIf="step==3">
+      <h1>Imposta la rete</h1>
+      <ion-label>SSID</ion-label>
+      <ion-input formControlName="ssid" placeholder=""></ion-input>
+      <p *ngIf="ssid.hasError('required') && ssid.touched">Campo Obbligatorio</p>
+      <ion-label>Password SSID</ion-label>
+      <ion-input type="password" formControlName="passwordWifi" placeholder="******"></ion-input>
+      <p *ngIf="passwordWifi.hasError('required') && passwordWifi.touched">Campo Obbligatorio</p>
+    </div>
+    <ion-row>
+      <button (click) ="stepForward()">AVANTI</button>
+    </ion-row>
   </form>
 </ion-content>
